# pynikto

./: LICENSE  QUICKSTART.md  README.md  USAGE.md  USAGE_EXAMPLES.md  api.py  config.py  database_loader.py  evasion.py  findings.py  http_client.py  nikto.py  nmap_integration.py  output_formatters.py  plugin_loader.py  pyproject.toml  statistics.py  targets.py  update_db.py  variables.py
databases/: db_domino.json  db_favicon.json  db_files.json  db_tests.json
databases/cve/: cve_tests.json  web_app_cves.json
databases/nuclei/: sample_templates.json  web_technologies.json
databases/seclists/: api_endpoints.json  common_paths.json  sensitive_files.json
databases/wappalyzer/: technologies.json
docs/: INTEGRATION_EXAMPLES.md  NMAP_INTEGRATION_README.md
plugins/: anomaly_detection.py  cgi_detection.py  content_search.py  cookies.py  crawler.py  embedded.py  exploit_verification.py  extra_databases.py  files_from_db.py  headers_fingerprint.py  hostname_files.py  http_methods.py  outdated.py  robots.py  security_headers.py  ssl_checks.py  uncommon_headers.py  vulnerability_correlation.py
plugins/__pycache__/: files_from_db.cpython-314.py  headers_fingerprint.cpython-314.py
