[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pynikto"
version = "0.1.0"
description = "Python-based web server scanner inspired by Nikto"
authors = [
    { name="sudo-zenjy" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "GPL-3.0" }

dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "colorama",
    "tqdm"
]

[project.scripts]
pynikto = "nikto:main"
